fix: better overflow

--- a/src/popup/components/feed.css
+++ b/src/popup/components/feed.css
@@ -3,6 +3,7 @@ feed-list {
   display: flex;
 
   justify-content: center;
+  overflow: scroll;
 }
 
 .feeds {
